# clipstores-scraper

./: .coderabbit.yaml  .env.example  .gitignore  README.md  pyproject.toml  test_agent_cli.py  test_apclips.py  test_cache.py  test_clips4sale.py  test_enrich_merge.py  test_goddesssnow.py  test_iwantclips.py  test_loyalfans.py  test_manyvids.py  test_matching.py  test_models_unescape.py  test_multistore.py  test_state.py  test_yourvids.py
.claude/agents/: scene-matcher.md  scene-triage.md  store-auditor.md
.claude/workflows/: match-by-tag.js
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
src/clipstores_scraper/: __init__.py  agent_cli.py  cache.py  cli.py  config.py  enrich_cli.py  interrupt.py  matching.py  models.py  pipeline.py  stash.py  state.py  tui.py
src/clipstores_scraper/stores/: __init__.py  apclips.py  base.py  clips4sale.py  goddesssnow.py  iwantclips.py  loyalfans.py  manyvids.py  modelcentro.py  yourvids.py
