[project]
name = "clipstores-scraper"
version = "0.1.0"
description = "Find clip-store URLs for Stash scenes that StashDB can't match, and write them back."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "rapidfuzz>=3.9",
    "typer>=0.26.8",
    "python-dotenv>=1.0",
    "textual>=8.2.8",
]

[project.scripts]
clipstores-scraper = "clipstores_scraper.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clipstores_scraper"]

[dependency-groups]
dev = ["ruff>=0.15.21"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]

[tool.ruff.lint.isort]
known-first-party = ["clipstores_scraper"]
